[package]
description = "A bindgen-generated Rust wrapper around the DataStax Cassandra C++ driver plus working examples. You probably want to use the \"cassandra-cpp\" crate which provides a safe wrapper."
documentation = "https://docs.rs/cassandra-sys-rs"
# no homepage yet
repository = "https://github.com/csommelet/cassandra-sys-rs"
readme = "README.md"
keywords = ["Cassandra", "binding", "CQL", "client", "database" ]
categories = [ "api-bindings", "database", "external-ffi-bindings" ]
license = "Apache-2.0"
name = "cassandra-cpp-sys"
version = "0.14.0"
authors = ["Tupshin Harper <tupshin@tupshin.com>", "Keith Wansbrough <Keith.Wansbrough@metaswitch.com>"]
build = "build.rs"

[lib]
name = "cassandra_cpp_sys"

[dev-dependencies]
log = "0.3"
env_logger = "0.4"

[features]
default=[]
